src/assets/styles/base/_base.scss
/*!
 * Copyright (c) 2020-present Katan
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

:root {
	--kt-success-color: #4cd137;
	--kt-success-darker-color: #44bd32;
	--kt-danger-color: #fc5c65;
	--kt-danger-darker-color: #eb3b5a;
	--kt-warning-color: #fed330;
	--kt-warning-darker-color: #f7b731;
	--kt-primary-darker-color: #3c70ea;
	--kt-primary-color: #4b7bec;
	--kt-primary-text-color: #ffffff;
}

[data-theme="light"] {
	--kt-text-color: #4f5660;
	--kt-background: #fafafa;
	--kt-background-secondary: #ffffff;
	--kt-background-tertiary: rgba(0, 0, 0, 0.01);
	--kt-background-accent: #eee;
	--kt-panel-sidebar: var(--kt-primary-color);
	--kt-border-color: #f1f1f1;
	--kt-muted-color: gray;
	--kt-muted-darker-color: darkgray;
	--kt-shadow: rgba(0, 0, 0, 0.12);
	--kt-scrollbar: #fafafa;
	--kt-scrollbar-thumb: #e5e5e5;
}

[data-theme="dark"] {
	--kt-text-color: #ffffff;
	--kt-background: #232931;
	--kt-background-secondary: #29303a;
	--kt-background-tertiary: #252b33;
	--kt-background-accent: #1e2329;
	--kt-panel-sidebar: #252b33;
	--kt-border-color: #333b47;
	--kt-muted-color: #bbb;
	--kt-muted-darker-color: #999;
	--kt-shadow: rgba(255, 255, 255, 0.06);
	--kt-scrollbar: rgba(0, 0, 0, 0.01);
	--kt-scrollbar-thumb: rgba(0, 0, 0, 0.15);
}

